--- a/Test/css/style.css
+++ b/Test/css/style.css
@@ -10,6 +10,10 @@ h4 a {
     color: white;
 }
 
+h4 a:hover {
+    color: yellow;
+}
+
 li {
     list-style-type: none;
     padding-bottom: 10px;
@@ -49,6 +53,15 @@ li {
 
 .pt-30 {
     padding-top: 30px;
+}
+
+.ml {
+    padding-left: 300px;
+}
+
+.wood-color {
+    background-color: #b45f06;
+    color: white;
 }
 
 .left-panel-color {
