--- a/Test/css/style.css
+++ b/Test/css/style.css
@@ -2,7 +2,7 @@
     background-image: linear-gradient(to right top, #051937, #004d7a, #008793, #00bf72, #a8eb12);
 }
 
-form {
+.form {
     padding: 60px;
 }
 
