--- a/Code/eCommerce MVC/eCommerce MVC/Views/ProductMaster/ProductDetils.cshtml
+++ b/Code/eCommerce MVC/eCommerce MVC/Views/ProductMaster/ProductDetils.cshtml
@@ -1,9 +1,12 @@
 ﻿@model eCommerce_Model.ProductMasterModel
+
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+<script src="~/Scripts/jquery-3.6.0.min.js"></script>
 
 @{
     ViewBag.Title = "ProductDetils";
     Layout = "~/Views/Shared/_Layout2.cshtml";
+
 }
 
 <h2>ProductDetils</h2>
@@ -22,7 +25,7 @@
             {
                 @Html.HiddenFor(model => model.ProductID)
                 <div>
-                    <button type="submit" class="btn btn-warning" onclick="addToCart()">Add to Cart</button>
+                    <button type="submit" id="btnAddCart" class="btn btn-warning" onclick="addToCart()">Add to Cart</button>
                 </div>
             }
         </div>
@@ -46,8 +49,19 @@
     </div>
 </div>
 
+
 <script>
+
+    $(document).ready(function () {
+        if ('@ViewBag.Button' == "true") {
+            $('#btnAddCart').hide();
+        }
+        else {
+            $('#btnAddCart').show();
+        }
+    });
+
     function addToCart() {
         alert("Item added into Cart");
-        }
+    }
 </script>
