--- a/Code/eCommerce MVC/eCommerce MVC/Views/Shared/_Layout2.cshtml
+++ b/Code/eCommerce MVC/eCommerce MVC/Views/Shared/_Layout2.cshtml
@@ -28,6 +28,7 @@
     </div>
 
     <div class="container body-content">
+        <br />
         @RenderBody()
         <hr />
         <footer>
@@ -35,7 +36,7 @@
         </footer>
     </div>
 
-    <script src="~/Scripts/jquery-3.4.1.min.js"></script>
+    @*<script src="~/Scripts/jquery-3.4.1.min.js"></script>*@
     <script src="~/Scripts/bootstrap.min.js"></script>
 </body>
 </html>
